# accurate-transit

./: README.md  cypress_test.sh  pyproject.toml
.github/workflows/: frontend-tests.yml
analytics/: PLAN.md  analyze.py  deltas.py  runServer.sh  server.py
assets/logo/: TTT Logo.ai
backend/: README.md  cumtd.js  index.js  package.json
frontend/: README.md  cypress_test.sh  jest.config.js  package-lock.json  package.json
frontend/cypress/integration/: bus_page.spec.js  landing_page.spec.js  overview_page.spec.js
frontend/src/: index.css  index.tsx  routes.tsx
frontend/src/api/: cumtd.ts  endpoints.ts  historical.ts  location.ts  routes.ts
frontend/src/components/: BusList.tsx  BusSelector.tsx  BusView.tsx
frontend/src/components/Map/: index.tsx
frontend/src/routes/: Bus.tsx  Home.tsx  Overview.tsx
frontend/src/types/: Bus.ts  bus.ts  cumtd.ts  historical.ts
frontend/src/util/: bus.test.ts  bus.ts
scrape/: scrape.py
