[tool.poetry]
name = "tiny-timely-transit"
version = "0.1.0"
description = ""
authors = ["Max Fan <root@max.fan>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
geopandas = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
